--- a/templates/base.html
+++ b/templates/base.html
@@ -53,6 +53,12 @@
           </li>
         </ul>
       </div><!-- /.navbar-collapse -->
+      <ul class="nav navbar-nav navbar-right">
+        {% if session["student"] or session["admin"] or session["super_admin"]%}<li><a href="/logout/">Logout</a></li>
+        {%endif%}
+      </ul>
+    </div>
+  </div>
 </nav>
 
   <center>{% block body %}{% endblock %}</center>
