--- a/templates/home.html
+++ b/templates/home.html
@@ -1,3 +1,22 @@
 {% extends "base.html" %}
 {% block body %}
+
+
+<div class="jumbotron">
+  <h1>Project Name</h1>
+  <p id="description">Team Caliente Rick, composed of Anika Kathuria, Kika , Amy Xu, and Haley Zeng present _____________, a resource to connect individual donors to homeless shelters. Potential donors are able to see the specific needs of shelters in their area, making the donation process much more transparent.</p>
+  <p><a class="btn btn-primary btn-lg" href="#" role="button">Log In</a></p>
+  <p><a class="btn btn-primary btn-lg" href="#" role="button">Register</a></p>
+</div>
+<style>
+#description {
+  padding-left: 150px;
+  padding-right: 150px;
+}
+.jumbotron {
+  background-color: white;
+}
+
+</style>
+
 {% endblock %}
