--- a/templates/home.html
+++ b/templates/home.html
@@ -5,21 +5,24 @@
 <div class="jumbotron">
   <h1>Project Name</h1>
   <p id="description">Team Caliente Rick, composed of Anika Kathuria, Kika , Amy Xu, and Haley Zeng present _____________, a resource to connect individual donors to homeless shelters. Potential donors are able to see the specific needs of shelters in their area, making the donation process much more transparent.</p>
-  <p><a class="btn btn-primary btn-lg" href="#" role="button">Log In</a></p>
-  <p><a class="btn btn-primary btn-lg" href="#" role="button">Register</a></p>
 </div>
-<style>
-#description {
-  padding-left: 150px;
-  padding-right: 150px;
-}
-.jumbotron {
-  background-color: white;
-}
-.btn .btn-primary .btn-lg {
-  display: inline-block;
-}
 
-</style>
+<div class="container">
+  <div class="row">
+    <div class="col-md-12 text-center">
+      <div class="box">
+        <div class="box-content">
+          <h1 class="tag-title">I'm a...</h1>
+          <hr />
+          <p class="intro">
+            <a class="btn btn-primary btn-lg" href="/pauthenticate/" role="button">private donor</a>
+            <a class="btn btn-primary btn-lg" href="/hauthenticate/" role="button">homeless shelter</a>
+          </p>
+          <br />
+            <!-- <a href="/login/" class="btn btn-info btn-lg btn-block">Login</a> -->
+        </div>
+      </div>
+    </div>
+  </div>
 
 {% endblock %}
