routes for login

--- a/templates/home.html
+++ b/templates/home.html
@@ -12,11 +12,10 @@
     <div class="col-md-12 text-center">
       <div class="box">
         <div class="box-content">
-          <h1 class="tag-title">I'm a...</h1>
+          <h1 class="tag-title">Login/Register</h1>
           <hr />
           <p class="intro">
-            <a class="btn btn-primary btn-lg" href="/pauthenticate/" role="button">private donor</a>
-            <a class="btn btn-primary btn-lg" href="/hauthenticate/" role="button">homeless shelter</a>
+            <a class="btn btn-primary btn-lg" href="/pauthenticate/" role="button">Go!</a>
           </p>
           <br />
             <!-- <a href="/login/" class="btn btn-info btn-lg btn-block">Login</a> -->
