--- a/templates/authenticate.html
+++ b/templates/authenticate.html
@@ -6,17 +6,15 @@
       <div class="col-md-6">
         <h1 class="display-4">Register:</h1>
         <p><i>If you have an account, please login.</i></p>
-        <form action="/login/" method="POST">
-          Username: <input class="form-control" type="text" name="username" required> <br>
+        <form action="/register/" method="POST">
+          Email: <input class="form-control" type="text" name="email" required> <br>
           Password:&thinsp; <input class="form-control" type="password" name="password" required> <br>
           Confirm Password:&thinsp; <input class="form-control" type="password" name="cpassword" required> <br>
-          Email: <input class="form-control" type="text" name="email" required> <br>
-          Street Address: <input class="form-control" type="text" name="email" required> <br>
-          City:  <input class="form-control" type="text" name="city" required> <br>
-          State: <input class="form-control" type="text" name="state" required> <br>
-          Zip Code: <input class="form-control" type="text" name="zip" required> <br>
-          Phone Number: <input class="form-control" type="text" name="zip"><br/>
-          <input class="btn btn-success btn-block" type="submit" name="button" value="dreg" action="submit">
+          First Name:<input class="form-control" type="text" name="first" required> <br>
+          Last Name: <input class="form-control" type="text" name="last" required> <br>
+          Type: <input type="radio" name="type" value="donor">Donor<br>
+          <input type="radio" name="type" value="shelter">Homeless Shelter<br>
+          <input class="btn btn-success btn-block" type="submit" name="register" value="register" action="submit">
         </form>
         </div>
         <!--Register-->
@@ -24,41 +22,44 @@
           <h1 class="display-4">Login:</h1>
           <p><i>If you want an account, please register:</i></p>
           <form action="/login/" method="POST">
-            Username: <input class="form-control" type="text" name="username" required> <br>
+            Email: <input class="form-control" type="text" name="username" required> <br>
             Password:&thinsp; <input class="form-control" type="password" name="password" required> <br>
-            <input class="btn btn-success btn-block" type="submit" name="button" value="dlogin" action="submit">
+            <input class="btn btn-success btn-block" type="submit" name="login" value="login" action="submit">
           </form>
         </div>
     </div>
   </div>
-
-{% else %}
-  <div class="container">
-    <div class="row">
+<!-- {% else %}
+<div class="container">
+  <div class="row">
+    <div class="col-md-6">
+      <h1 class="display-4">Register:</h1>
+      <p><i>If you have an account, please login.</i></p>
+      <form action="/register/" method="POST">
+        Name: <input class="form-control" type="text" name="name" required> <br>
+        Password:&thinsp; <input class="form-control" type="password" name="password" required> <br>
+        Confirm Password:&thinsp; <input class="form-control" type="password" name="cpassword" required> <br>
+        Street Address: <input class="form-control" type="text" name="street" required> <br>
+        City:  <input class="form-control" type="text" name="city" required> <br>
+        State: <input class="form-control" type="text" name="state" required> <br>
+        Zip Code: <input class="form-control" type="text" name="zip" required> <br>
+        Phone Number: <input class="form-control" type="text" name="num"><br/>
+        <input class="btn btn-success btn-block" type="submit" name="sregister" value="register" action="submit">
+      </form>
+      </div>
+      <!--Register-->
       <div class="col-md-6">
-        <h1 class="display-4">Register:</h1>
-        <p><i>If you have an account, please login.</i></p>
+        <h1 class="display-4">Login:</h1>
+        <p><i>If you want an account, please register:</i></p>
         <form action="/login/" method="POST">
-          Username: <input class="form-control" type="text" name="username" required> <br>
-          Password:&thinsp; <input class="form-control" type="password" name="password" required> <br>
-          Confirm Password:&thinsp; <input class="form-control" type="password" name="cpassword" required> <br>
           Email: <input class="form-control" type="text" name="email" required> <br>
-          <input class="btn btn-success btn-block" type="submit" name="button" value="sreg" action="submit">
+          Password:&thinsp; <input class="form-control" type="password" name="password" required> <br>
+          <input class="btn btn-success btn-block" type="submit" name="slogin" value="login" action="submit">
         </form>
-        </div>
-        <!--Register-->
-        <div class="col-md-6">
-          <h1 class="display-4">Login:</h1>
-          <p><i>If you want an account, please register:</i></p>
-          <form action="/login/" method="POST">
-            Username: <input class="form-control" type="text" name="username" required> <br>
-            Password:&thinsp; <input class="form-control" type="password" name="password" required> <br>
-            <input class="btn btn-success btn-block" type="submit" name="button" value="slogin" action="submit">
-          </form>
-        </div>
-    </div>
+      </div>
   </div>
+</div>
 
-{% endif %}
+{% endif %} -->
 
 {% endblock %}
