--- a/templates/home.html
+++ b/templates/home.html
@@ -15,7 +15,7 @@
           <h1 class="tag-title">Login/Register</h1>
           <hr />
           <p class="intro">
-            <a class="btn btn-primary btn-lg" href="/pauthenticate/" role="button">Go!</a>
+            <a class="btn btn-primary btn-lg" href="/authenticate/" role="button">Go!</a>
           </p>
           <br />
             <!-- <a href="/login/" class="btn btn-info btn-lg btn-block">Login</a> -->
