--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,6 +1,18 @@
 {% extends "base.html" %}
+
+{% block head %}
+{{ super }}
+    <style>
+       #map {
+        height: 600px;
+        width: 100%;
+       }
+    </style>
+
+{% endblock %}
+
 {% block body %}
-  {% if donor %}
+  {% if director %}
     <div>
 
       <!-- Nav tabs -->
@@ -48,7 +60,7 @@
       </div>
 
     </div>
-  {% elif director %}
+  {% elif donor %}
     <div>
 
       <!-- Nav tabs -->
@@ -61,8 +73,28 @@
 
       <!-- Tab panes -->
       <div class="tab-content">
-        <div role="tabpanel" class="tab-pane active" id="home">...</div>
-        <div role="tabpanel" class="tab-pane" id="profile">...</div>
+        <div role="tabpanel" class="tab-pane active" id="home">
+	  
+	  <div id="map"></div>
+	  <script>
+	    function initMap() {
+	    var midtown = {lat: 40.7561050, lng:-73.9869487};
+	    var map = new google.maps.Map(document.getElementById('map'), {
+	    zoom: 12,
+	    center: midtown
+	    });
+	    var marker = new google.maps.Marker({
+	    position: midtown,
+	    map: map
+	    });
+	    }
+	  </script>
+	  <script async defer
+		  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCNjfxzJuAIph_75M8IyqwQVbGEBtt9B4E&callback=initMap">
+	  </script>
+    
+	</div>
+	<div role="tabpanel" class="tab-pane" id="profile">...</div>
         <div role="tabpanel" class="tab-pane" id="messages">...</div>
         <div role="tabpanel" class="tab-pane" id="settings">...</div>
       </div>
