--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -76,23 +76,11 @@
         <div role="tabpanel" class="tab-pane active" id="home">
 	  
 	  <div id="map"></div>
-	  <script>
-	    function initMap() {
-	    var midtown = {lat: 40.7561050, lng:-73.9869487};
-	    var map = new google.maps.Map(document.getElementById('map'), {
-	    zoom: 12,
-	    center: midtown
-	    });
-	    var marker = new google.maps.Marker({
-	    position: midtown,
-	    map: map
-	    });
-	    }
-	  </script>
+	  <script src="{{ url_for('static', filename='map.js')}}"></script> 
 	  <script async defer
 		  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCNjfxzJuAIph_75M8IyqwQVbGEBtt9B4E&callback=initMap">
 	  </script>
-    
+	  
 	</div>
 	<div role="tabpanel" class="tab-pane" id="profile">...</div>
         <div role="tabpanel" class="tab-pane" id="messages">...</div>
