--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
   <head>
-    {% block head %}
     <!-- use utf-8 chars -->
     <meta charset="utf-8">
     <!-- look pretty on mobile -->
@@ -13,7 +12,7 @@
       <link rel="stylesheet" href="{{ url_for('static',filename='bootstrap.min.css') }}">
       <link rel="stylesheet" href="{{ url_for('static',filename='style.css') }}">
       <title>{% block title %} {% endblock %}</title>
-      {% endblock %}
+      {% block head %}{% endblock %}
   </head>
 <body>
 
