--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,7 +1,6 @@
 {% extends "base.html" %}
 
 {% block head %}
-{{ super }}
     <style>
        #map {
         height: 600px;
@@ -54,9 +53,8 @@
             State: <input class="form-control" type="text" name="state" required> <br>
             Zip Code: <input class="form-control" type="text" name="zip" required> <br>
             Phone Number: <input class="form-control" type="text" name="num" required><br/>
-            # of People Served:  <input class="form-control" type="number" name="pop" required><br/>
-            Description:
-            <textarea class="form-control" name="des" form="add"></textarea><br/>
+            # of People Served:  <input class="form-control" type="text" name="pop" required><br/>
+            Description:<input class="form-control" type="text" name="des" required><br/>
             <input class="btn btn-success btn-lg" type="submit" name="submit" value="submit" action="submit">
           </form>
         </div>
@@ -78,13 +76,13 @@
       <!-- Tab panes -->
       <div class="tab-content">
         <div role="tabpanel" class="tab-pane active" id="home">
-	  
+
 	  <div id="map"></div>
-	  <script src="{{ url_for('static', filename='map.js')}}"></script> 
+	  <script src="{{ url_for('static', filename='map.js')}}"></script>
 	  <script async defer
 		  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCNjfxzJuAIph_75M8IyqwQVbGEBtt9B4E&callback=initMap">
 	  </script>
-	  
+
 	</div>
 	<div role="tabpanel" class="tab-pane" id="profile">...</div>
         <div role="tabpanel" class="tab-pane" id="messages">...</div>
