--- a/templates/home.html
+++ b/templates/home.html
@@ -5,7 +5,7 @@
 
 <div class="jumbotron">
   <h1>Project Name</h1>
-  <p id="description">Team Caliente Rick, composed of Anika Kathuria, Kika , Amy Xu, and Haley Zeng present _____________, a resource to connect individual donors to homeless shelters. Potential donors are able to see the specific needs of shelters in their area, making the donation process much more transparent.</p>
+  <p id="description">Team Caliente Rick, composed of Anika Kathuria, Kika Kovaleski, Amy Xu, and Haley Zeng present _____________, a resource to connect individual donors to homeless shelters. Potential donors are able to see the specific needs of shelters in their area, making the donation process much more transparent.</p>
 </div>
 
 <div class="container">
