--- a/templates/home.html
+++ b/templates/home.html
@@ -62,5 +62,12 @@ imgHolder{ position:absolute; top:100px; left:100px; text-align:left; }
 </div>
 
 </body>
+<style>
+  #description{
+    padding-left: 200px;
+    padding-right: 200px;
+  }
+</style>
+  
 
 {% endblock %}
