--- a/templates/home.html
+++ b/templates/home.html
@@ -67,6 +67,13 @@ imgHolder{ position:absolute; top:100px; left:100px; text-align:left; }
     padding-left: 200px;
     padding-right: 200px;
   }
+  .jumbotron {
+  background-color: white;
+}
+.main-button {
+  display: inline-block;
+
+}
 </style>
   
 
