--- a/templates/home.html
+++ b/templates/home.html
@@ -64,8 +64,8 @@ imgHolder{ position:absolute; top:100px; left:100px; text-align:left; }
 </body>
 <style>
   #description{
-    padding-left: 200px;
-    padding-right: 200px;
+    padding-left: 15%;
+    padding-right: 15%;
   }
   .jumbotron {
   background-color: white;
