--- a/templates/home.html
+++ b/templates/home.html
@@ -66,9 +66,10 @@ imgHolder{ position:absolute; top:100px; left:100px; text-align:left; }
   #description{
     padding-left: 15%;
     padding-right: 15%;
+    padding-top: 25px;
   }
   .jumbotron {
-  background-color: white;
+    margin-top: -20px;
 }
 .main-button {
   display: inline-block;
