--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -8,7 +8,37 @@
        }
     </style>
 
-    <script src="{{ url_for('static', filename='map.js')}}"></script>
+    <script>
+
+var map;
+
+
+function add_marker(latitude, longitude){
+  var marker = new google.maps.Marker({
+    position: {lat : latitude, lng : longitude},
+    map: map,
+    title: 'Hello World!'
+  });
+
+}
+
+function initMap() {
+var midtown = {lat: 40.7561050, lng:-73.9869487};
+
+  map = new google.maps.Map(document.getElementById('map'), {
+    zoom: 13,
+    center: midtown
+});
+
+add_marker(midtown.lat, midtown.lng);
+
+ppp = {lat: 40.743508, lng:-73.999774};
+
+add_marker(ppp.lat, ppp.lng);
+
+}
+            
+    </script>
 	  
     <script async defer
 		  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCNjfxzJuAIph_75M8IyqwQVbGEBtt9B4E&callback=initMap">
@@ -94,11 +124,14 @@
         <div role="tabpanel" class="tab-pane active" id="home">
 
 	  <div id="map"></div>
+
 	  {% for location in locations %}
 	  <script>
-	    add_marker(location["latitude"], location["longitude"]);
+	    add_marker({{location["latitude"]}}, {{location["longitude"]}});
 	  </script>
+
 	  {% endfor %}
+
 	</div>
 	<div role="tabpanel" class="tab-pane" id="profile">...</div>
         <div role="tabpanel" class="tab-pane" id="messages">...</div>
