--- a/templates/home.html
+++ b/templates/home.html
@@ -5,7 +5,7 @@
 
 <div class="jumbotron">
   <h1>Project Name</h1>
-  <p id="description">Team Caliente Rick, composed of Anika Kathuria, Kika Kovaleski, Amy Xu, and Haley Zeng present _____________, a resource to connect individual donors to homeless shelters. Potential donors are able to see the specific needs of shelters in their area, making the donation process much more transparent.</p>
+  <p id="description"><i>The best way for individual donors and homeless shelters to connect with one another in order to streamline the donating process and help those in need.</i></p>
 </div>
 
 <div class="container">
@@ -70,6 +70,8 @@ imgHolder{ position:absolute; top:100px; left:100px; text-align:left; }
   }
   .jumbotron {
     margin-top: -20px;
+    background-color: #5d8aa8;
+    color: whitesmoke;
 }
 .main-button {
   display: inline-block;
