--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -15,8 +15,12 @@ var map;
 
 var shelters = [];
 
-function register_shelter(d){
-   shelters.push( d );
+function register_shelter(name, phone, desc, lat, long){
+shelters.push( {name : name,
+phone : phone,
+desc : desc,
+lat : lat,
+long : long} );
 }
 
 function add_marker(latitude, longitude){
@@ -27,6 +31,13 @@ function add_marker(latitude, longitude){
 	title: 'Hello World!'
     });
 
+return marker;
+}
+
+function formatPhoneNumber(s) {
+  var s2 = (""+s).replace(/\D/g, '');
+  var m = s2.match(/^(\d{3})(\d{3})(\d{4})$/);
+  return (!m) ? null : "(" + m[1] + ") " + m[2] + "-" + m[3];
 }
 
 function initMap() {
@@ -36,13 +47,31 @@ function initMap() {
 	zoom: 13,
 	center: midtown
 });
+for (i = 0; i < shelters.length; i++){
+		shelter = shelters[i];
+		var marker = add_marker(shelter["lat"], shelter["long"]);
+		var contentString = '<div><div></div><h1 class="firstHeading">' +
+		shelter["name"] +
+		'</h1><div>' +
+		shelter["desc"] +
+		'<br>Phone Number: ' +
+		formatPhoneNumber(shelter["phone"]) + 
+		'</div></div>';
 
-    for (i = 0; i < shelters.length; i++){
-	add_marker(shelters[i]["latitude"], shelters[i]["longitude"]);
-	
-    };
-}
+		var infowindow = new google.maps.InfoWindow({
+		content: contentString
+		});
 
+		marker.addListener('click', function() {
+		infowindow.open(map, marker);
+		});
+
+		
+		};
+		
+
+		}
+		
     </script>
 
     <script async defer
@@ -131,7 +160,13 @@ function initMap() {
 
 	  {% for location in locations %}
 	  <script>
-	    register_marker({{location["address"]["latitude"]}}, {{location["address"]["longitude"]}});
+	    register_shelter(
+	    "{{ location['name'] }}",
+	    {{ location["phone_number"] }},
+	    "{{ location['description'] }}",
+	    {{ location["address"]["latitude"] }},
+	    {{ location["address"]["longitude"] }}
+	    );
 	  </script>
 
 	  {% endfor %}
