--- a/templates/results.html
+++ b/templates/results.html
@@ -3,13 +3,65 @@
 <div class="container">
   <div class="row">
     <div class="col-md-6">
-      {% for item in shelter%}
-        <!-- {% if item == "address" %}
-          {{item}}: {{ geofxn(shelter[item], method="reverse") }}<br/>
-        {% else %} -->
-        {{item}}: {{shelter[item]}} <br/>
+      <!-- {% for item in shelter%}
+        {% if item=="_id" or item=="directors" or item == "last_updated" or item == id %}
+        {% else %}
+          {{item}}: {{shelter[item]}} <br/>
+        {%endif%}
+      {% endfor %} -->
+      <h3>Shelter Details</h3>
+      <p>
+        Name: {{shelter["name"]}} <br/>
+        Phone #: {{shelter["phone_number"]}}<br/>
+        Address: {{shelter["address"]}}<br/>
+        # of People Serving: {{shelter["population"]}}<br/>
+        Email: {{shelter["directors"]}}
+      </p>
+      <hr>
+      <h3>Currently Requesting</h3>
+      <p>
+        {% if shelter["needs"] != None %}
+          {% for item in shelter["needs"] %}
+            {{item}}: {{shelter["needs"]}}<br>
+          {% endfor %}
         {% endif %}
-      {% endfor %}
+      </p>
+      <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">Make a New Request</button>
+      <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+              <h4 class="modal-title" id="myModalLabel">New Request</h4>
+            </div>
+            <div class="modal-body">
+              <form action="/request/" method="POST">
+              <p><i>At this time, you may request for one item per request only.</i></p>
+              <label for="request_name" class="col-2 col-form-label">Requesting for: </label><input class="form-control" type="text" name="request_name"><br>
+              <input type="hidden" name="id" value="{{ shelter['id'] }}">
+              <label for="request_amt" class="col-2 col-form-label">Amount Requesting: </label><input class="form-control" type="number" name="request_amt"><br>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+              <input type="submit" class="btn btn-primary" name="request_submit" value="Request">
+            </form>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- <input class="btn btn-primary btn-lg" type="button" name="modal" value="Make a New Request"> -->
+    </div>
+    <div class="col-md-6">
+      <h3>Update Your Information:</h3>
+      <form action="/update/">
+        <label for="name" class="col-2 col-form-label">Name: </label><input class="form-control" type="text" name="name"><br>
+        <label for="num" class="col-2 col-form-label">Phone Number: </label><input class="form-control" type="text" name="num"> <br>
+        <label for="address" class="col-2 col-form-label">Address: </label><input class="form-control" type="text" name="address"> <br>
+        <label for="pop" class="col-2 col-form-label"># of People Serving: </label><input class="form-control" type="text" name="pop"> <br>
+        <label for="email" class="col-2 col-form-label">Email: </label><input class="form-control" type="text" name="email"> <br>
+        <input class="btn btn-default btn-lg" type="submit" name="submit" value="submit" action="submit">
+      </form>
+    </div>
     </div>
   </div>
 </div>
