--- a/templates/results.html
+++ b/templates/results.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% block body %}
+<a href="/dashboard/"><button type="button" class="btn btn-primary btn-lg">Return to Dashboard</button></a>
 <div class="container">
   <div class="row">
     <div class="col-md-6">
@@ -21,8 +22,8 @@
       <h3>Currently Requesting</h3>
       <p>
         {% if shelter["needs"] != None %}
-          {% for item in shelter["needs"] %}
-            {{item}}: {{shelter["needs"]}}<br>
+          {% for item in shelter["needs"] %} <!--list of dicts-->
+            {{item}}: {{shelter["needs"][item]}}<br>
           {% endfor %}
         {% endif %}
       </p>
@@ -52,15 +53,33 @@
       <!-- <input class="btn btn-primary btn-lg" type="button" name="modal" value="Make a New Request"> -->
     </div>
     <div class="col-md-6">
-      <h3>Update Your Information:</h3>
-      <form action="/update/">
-        <label for="name" class="col-2 col-form-label">Name: </label><input class="form-control" type="text" name="name"><br>
-        <label for="num" class="col-2 col-form-label">Phone Number: </label><input class="form-control" type="text" name="num"> <br>
-        <label for="address" class="col-2 col-form-label">Address: </label><input class="form-control" type="text" name="address"> <br>
-        <label for="pop" class="col-2 col-form-label"># of People Serving: </label><input class="form-control" type="text" name="pop"> <br>
-        <label for="email" class="col-2 col-form-label">Email: </label><input class="form-control" type="text" name="email"> <br>
-        <input class="btn btn-default btn-lg" type="submit" name="submit" value="submit" action="submit">
-      </form>
+      <h3>Update Your Information:</h3><br>
+      <button type="button" class="btn btn-primary btn-block" data-toggle="modal" data-target="#myModal1">Update</button>
+      <div class="modal fade" id="myModal1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel2">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+              <h4 class="modal-title" id="myModalLabel2">New Request</h4>
+            </div>
+            <div class="modal-body">
+              <form action="/updateinfo/" method="POST">
+                <i>Your current information has been filled in for you. Please change the fields that are no longer accurate.</i><br/><br/>
+                <label for="name" class="col-2 col-form-label">Name: </label><input class="form-control" type="text" name="name" value="{{shelter["name"]}}" required><br>
+                <label for="num" class="col-2 col-form-label">Phone Number: </label><br/><i>Please do not enter any symbols. Ex: 123456789</i><input class="form-control" type="text" name="num" value="{{shelter["phone_number"]}}" required> <br>
+                <label for="address" class="col-2 col-form-label">Address: </label><br/><i>Please enter latitude and longitude coordinates in the [ {lat.} , {lng.} ] format</i><input class="form-control" type="text" name="address" value="{{shelter["address"]}}" required> <br>
+                <label for="pop" class="col-2 col-form-label"># of People Serving: </label><input class="form-control" type="text" name="pop" value="{{shelter["population"]}}" required> <br>
+                <label for="email" class="col-2 col-form-label">Email: </label><input class="form-control" type="text" name="email" value="{{shelter["directors"]}}" required> <br>
+                <input type="hidden" name="id" value="{{ shelter['id'] }}">
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+              <input type="submit" class="btn btn-primary" name="request_submit" value="Request">
+            </form>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
     </div>
   </div>
