--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -62,7 +62,7 @@ function initMap() {
 	    '<br>Phone Number: ' +
 	    formatPhoneNumber(shelter["phone"]) +
 	    '<br>' +
-	    '<form action=""><input type="hidden" name="id" value="' +
+	    '<form action="/seeinfo/" method="POST"><input type="hidden" name="id" value="' +
 	    shelter["id"] +
 	    '"><input type="submit" value="See More"></form></div></div>';
 
