--- a/templates/home.html
+++ b/templates/home.html
@@ -4,7 +4,9 @@
 
 
 <div class="jumbotron">
-  <h1>Project Name</h1>
+  <h1 id = "projectname"><u>Project Connection</u></h>
+	<img id = "picture" src ="http://findicons.com/files/icons/1580/devine_icons_part_2/128/home_w.png"/>
+
   <p id="description"><i>The best way for individual donors and homeless shelters to connect with one another in order to streamline the donating process and help those in need.</i></p>
 </div>
 
@@ -66,16 +68,20 @@ imgHolder{ position:absolute; top:100px; left:100px; text-align:left; }
   #description{
     padding-left: 15%;
     padding-right: 15%;
-    padding-top: 25px;
+    margin-bottom: 15px;
   }
   .jumbotron {
     margin-top: -20px;
     background-color: #5d8aa8;
     color: whitesmoke;
 }
-.main-button {
-  display: inline-block;
-
+ #picture{
+    margin-bottom: 40px;
+}
+ #projectname{
+    font-family: 'Jockey One', sans-serif;
+    text-decoration: underline double;
+    
 }
 </style>
   
