--- a/templates/home.html
+++ b/templates/home.html
@@ -4,17 +4,18 @@
 
 
 <div class="jumbotron">
-  <h1 id = "projectname"><u>Project Connection</u></h>
-	<img id = "picture" src ="http://findicons.com/files/icons/1580/devine_icons_part_2/128/home_w.png"/>
+  <h1 id = "projectname"><span style= "font-family:Cinzel">PROJECT CONNECTION</span>
+	<img id = "picture" src ="http://findicons.com/files/icons/1580/devine_icons_part_2/128/home_w.png"/></h1>
 
-  <p id="description"><i>The best way for individual donors and homeless shelters to connect with one another in order to streamline the donating process and help those in need.</i></p>
+  <p id="description"><i>The best way for individual donors and homeless shelters to connect with one another, helping streamline the donating process and providing to those in need.</i></p>
 </div>
 
-<div class="container">
+<div class="left">
   <div class="row">
     <div class="col-md-12 text-center">
       <div class="box">
         <div class="box-content">
+	  <h4><i>Lend a Helping Hand</i></4>
           <h1 class="tag-title">Login/Register</h1>
           <hr />
           <p class="intro">
@@ -27,8 +28,9 @@
     </div>
   </div>
 </div>
+<div class="left">
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-<script type="text/JavaScript">
+<script type="text/JavaScript" id="slideshow" >
 <!--
 var picCount=0; // global
 var picArray= ["https://www.kcet.org/sites/kl/files/atoms/article_atoms/www.kcet.org/socal/departures/lariver/confluence/homeless%2520food%2520served%2520resized.jpg","http://macaulay.cuny.edu/eportfolios/runaways/files/2009/05/luckyshelternyt-002.jpg","http://image.morningjournal.com/storyimage/MJ/20161225/NEWS/161229662/EP/1/1/EP-161229662.jpg&maxh=400&maxw=667","http://image.dailynews.com/storyimage/LA/20161208/NEWS/161209526/AR/0/AR-161209526.jpg&maxh=400&maxw=667"]
@@ -38,7 +40,7 @@ function nextPic()
 { // check if adding 1 exceeds number of pics in array
 picCount=(picCount+1<picArray.length)? picCount+1 : 0;
 // build the img to write to page using the new pic reference
-var build='<img border="0" src="'+picArray[picCount]+'" width="600" height="400">\
+var build='<img border="0" src="'+picArray[picCount]+'" width="400" height="300">\
 ';
 document.getElementById("imgHolder").innerHTML=build;
 // repeat this after a puse of 2000ms (2sec).
@@ -46,14 +48,7 @@ setTimeout('nextPic()',3000)
 }
 //-->
 </script>
-<style type="text/css">
-<!--
 
-imgHolder{ position:absolute; top:100px; left:100px; text-align:left; }
-.LgR { color:#F00; font-size:30px; font-weight:bold; line-height:130%; background-color:#FFF; }
-.a18B { color:#792D99; font-size:18px; font-weight:bold; background-color:#FFF; }
--->
-</style>
 <title>Image Swap Static</title>
 </head>
 
@@ -62,13 +57,15 @@ imgHolder{ position:absolute; top:100px; left:100px; text-align:left; }
 <div id="imgHolder">
 <img border="0" src="img1.gif" width="205" height="100">
 </div>
-<br>
+</div>
+<div class = "left" id= "last">
+<h3> Make sure to check out your dashboard after logging in to see shelters near you and how you can help! </h3>
+</div>
 </body>
 <style>
   #description{
     padding-left: 15%;
     padding-right: 15%;
-    margin-bottom: 15px;
   }
   .jumbotron {
     margin-top: -20px;
@@ -79,10 +76,20 @@ imgHolder{ position:absolute; top:100px; left:100px; text-align:left; }
     margin-bottom: 40px;
 }
  #projectname{
-    font-family: 'Jockey One', sans-serif;
     text-decoration: underline double;
-    
+ 
 }
+  .left{
+    float:left;
+    width:33%;
+}
+#last{
+   text-align: center;
+}
+#slideshow{
+	padding-right: 200px;
+}
+  
 </style>
   
 
