--- a/templates/view.html
+++ b/templates/view.html
@@ -23,10 +23,25 @@
       <p>
         {% if shelter["needs"] != {} %}
           {% for item in shelter["needs"] %} <!--list of dicts-->
-            {{item}}: {{shelter["needs"][item]}}<br>
-        {% endfor %}
-	{% else %}
-	No current needs on file.<br>
+            <!-- {{item}}: {{shelter["needs"][item]}}<br> -->
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                <h3 class="panel-title">{{item}}</h3>
+              </div>
+              <div class="panel-body">
+                {{shelter["needs"][item]}}<br>
+                <!-- Button trigger modal -->
+                <form method="POST" action="/help/">
+                  <input type="hidden" name="id" value="{{shelter["id"]}}">
+                  <input type="hidden" name="item" value="{{item}}">
+                  <input type="hidden" name="amt" value="{{shelter["needs"][item]}}">
+                  <input type="submit" class="btn btn-primary btn-lg" name="help" value="Help">
+                </form>
+              </div>
+            </div>
+         {% endfor %}
+	      {% else %}
+	         No current needs on file.<br>
         {% endif %}
       </p>
     </div>
