--- a/templates/help.html
+++ b/templates/help.html
@@ -20,7 +20,8 @@
       <!-- <input class="btn btn-primary btn-lg" type="button" name="modal" value="Make a New Request"> -->
     </div>
     <div class="col-md-6">
-      <button type="button" class="btn btn-primary btn-block" data-toggle="modal" data-target="#myModal1">Update</button>
+      <h3>Donation to this Request</h3>
+      <button type="button" class="btn btn-primary btn-block" data-toggle="modal" data-target="#myModal1">Donation</button>
       <div class="modal fade" id="myModal1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel2">
         <div class="modal-dialog" role="document">
           <div class="modal-content">
@@ -35,6 +36,7 @@
                 <label for="lname" class="col-2 col-form-label">Last Name: </label><input class="form-control" type="text" name="lname" value="{{usr["last_name"]}}" readonly> <br>
                 <label for="email" class="col-2 col-form-label">Email: </label><input class="form-control" type="text" name="email" value="{{usr["email"]}}" readonly> <br>
                 <input type="hidden" name="id" value="{{ shelter['id'] }}">
+                <input type="hidden" name="item" value="{{ item }}">
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
