--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,33 @@
 {% extends "base.html" %}
-{% block head %}
+{% block body %}
+
+<head><link href="https://fonts.googleapis.com/css?family=Anton|Open+Sans+Condensed:300|Russo+One" rel="stylesheet"><link href="https://fonts.googleapis.com/css?family=Acme|Cherry+Cream+Soda" rel="stylesheet"></head>
+<div class="jumbotron">
+  <h1 id = "projectname"><span>PROJECT CONNECTION</span>
+	<img id = "picture" src ="http://findicons.com/files/icons/1580/devine_icons_part_2/128/home_w.png"/></h1>
+
+  <p id="description"><i>The best way for individual donors and homeless shelters to connect with one another, helping to streamline the donating process of providing to those in need.</i></p>
+</div>
+
+<div class="left">
+  <div class="row">
+    <div class="col-md-12 text-center">
+      <div class="box">
+        <div class="box-content">
+	  <h4 style = "color:gray"><i>Lend a Helping Hand</i></4>
+          <h1 class="tag-title">Login/Register</h1>
+          <hr />
+          <p class="intro">
+            <a class="btn btn-primary btn-lg" href="/authenticate/" role="button">Go!</a>
+          </p>
+          <br />
+            <!-- <a href="/login/" class="btn btn-info btn-lg btn-block">Login</a> -->
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="left">
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
 <script type="text/JavaScript" id="slideshow" >
 <!--
@@ -20,6 +48,19 @@ setTimeout('nextPic()',3000)
 //-->
 </script>
 
+<title>Image Swap Static</title>
+</head>
+
+<body onload="setTimeout('nextPic()',2000)">
+
+<div id="imgHolder">
+<img border="0" src="img1.gif" width="205" height="100">
+</div>
+</div>
+<div class = "left" id= "last">
+<h3 style="font-size: 40px"> Make sure to check out your dashboard after logging in to see shelters near you and how you can help them! </h3>
+</div>
+</body>
 <style>
   #description{
     padding-left: 15%;
@@ -33,10 +74,9 @@ setTimeout('nextPic()',3000)
  #picture{
     margin-bottom: 40px;
 }
-
  #projectname{
-    text-decoration: underline double;
 
+    font-family: 'Anton', sans-serif;
 }
   .left{
     float:left;
@@ -53,7 +93,6 @@ setTimeout('nextPic()',3000)
 	font-family: 'Anton', sans-serif;
 	padding-top: 20px;
 }
-
 </style>
 
 
