--- a/templates/view.html
+++ b/templates/view.html
@@ -14,7 +14,7 @@
       <p>
         Name: {{shelter["name"]}} <br/>
         Phone #: {{shelter["phone_number"]}}<br/>
-        Address: {{shelter["address"]["latitude"]}}, {{shelter["address"]["longitude"]}}<br/>
+        Address: {{shelter["address"]["text"]}}<br/>
         # of People Serving: {{shelter["population"]}}<br/>
         Email: {{shelter["directors"]}}
       </p>
